<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white">

    <RelativeLayout
        android:id="@+id/rl_01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/colorPrimary2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mTextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mTextView"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tv01"
            android:textColor="@drawable/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mTextView02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mTextView01"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/text01"
            android:textSize="26sp" />

        <Button
            android:id="@+id/Btn01"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_below="@+id/mTextView02"
            android:text="@string/Btn01"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Btn02"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_below="@id/Btn01"
            android:text="@string/tv02"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/ibtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Btn02"
            android:src="@mipmap/ibtn_normal" />

        <TextView
            android:id="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ibtn"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textColor="@color/colorPrimary2"
            android:textSize="30sp" />

        <RadioGroup
            android:id="@+id/radioGroup01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup01"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stature"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etHigh"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/strNULL"
                android:inputType="numberDecimal"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />
        </RadioGroup>

        <Button
            android:id="@+id/calcBtn"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_below="@id/radioGroup02"
            android:text="@string/calc"
            android:textColor="@color/colorAccent2"
            android:textSize="22sp" />

        <!--      <AnalogClock
                  android:id="@+id/analog_clock"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/calcBtn" />-->

        <DigitalClock
            android:id="@+id/digital_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/calcBtn" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/digital_clock" />

        <!--        <TimePicker
                    android:id="@+id/time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/digital_clock" />-->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/Btn03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Btn02"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Btn04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv02" />

        <HorizontalScrollView
            android:id="@+id/hsv_Gallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/ll_Gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/strNULL"
                    android:src="@mipmap/ic_down" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/strNULL"
                    android:src="@mipmap/ic_exit" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/strNULL"
                    android:src="@mipmap/ic_house" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/strNULL"
                    android:src="@mipmap/ic_left" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/strNULL"
                    android:src="@mipmap/ic_next" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/strNULL"
                    android:src="@mipmap/ic_previous" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/strNULL"
                    android:src="@mipmap/ic_right" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/strNULL"
                    android:src="@mipmap/ic_search" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/strNULL"
                    android:src="@mipmap/ic_up" />
            </LinearLayout>
        </HorizontalScrollView>

        <Gallery
            android:id="@+id/gallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:spacing="10dp" />

        <Button
            android:id="@+id/dialogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlterDialog"
            android:textSize="20sp" />

        <Button
            android:id="@+id/progressBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProgressDialog"
            android:textSize="20sp" />


        <SlidingDrawer
            android:id="@+id/sliding_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:content="@+id/sliding_content"
            android:handle="@+id/sliding_handle"
            android:orientation="vertical">

            <LinearLayout
                android:id="@id/sliding_handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/sliding_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ibtn_normal" />
            </LinearLayout>

            <GridView
                android:id="@id/sliding_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numColumns="2" />
        </SlidingDrawer>
    </LinearLayout>
</RelativeLayout>
